[#929] Fix dropdown position on mobile

--- a/frontend/src/components/event-calendar/styles.scss
+++ b/frontend/src/components/event-calendar/styles.scss
@@ -2,6 +2,9 @@
 
 .event-overlay-zoom {
   zoom: 80% !important;
+  @media (max-width: 540px) {
+    zoom: unset !important;
+  }
 }
 
 .event {
